# anime4k-wgpu

./: .gitignore  .typos.toml  CLAUDE.md  Cargo.toml  README.md  astro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: check.yaml  deploy.yml
anime4k-glsl/: README.md
anime4k-glsl/Deblur/: Anime4K_Deblur_DoG.glsl  Anime4K_Deblur_Original.glsl
anime4k-glsl/Denoise/: Anime4K_Denoise_Bilateral_Median.glsl  Anime4K_Denoise_Bilateral_Mode.glsl
anime4k-glsl/Experimental-Effects/: Anime4K_Darken_Fast.glsl  Anime4K_Darken_HQ.glsl  Anime4K_Darken_VeryFast.glsl  Anime4K_Thin_Fast.glsl  Anime4K_Thin_HQ.glsl  Anime4K_Thin_VeryFast.glsl
anime4k-glsl/Restore/: Anime4K_Clamp_Highlights.glsl
anime4k-glsl/Upscale/: Anime4K_3DGraphics_AA_Upscale_x2_US.glsl  Anime4K_3DGraphics_Upscale_x2_US.glsl  Anime4K_Upscale_CNN_x2_L.glsl  Anime4K_Upscale_CNN_x2_M.glsl  Anime4K_Upscale_CNN_x2_S.glsl  Anime4K_Upscale_CNN_x2_UL.glsl  Anime4K_Upscale_CNN_x2_VL.glsl  Anime4K_Upscale_DTD_x2.glsl  Anime4K_Upscale_Deblur_DoG_x2.glsl  Anime4K_Upscale_Deblur_Original_x2.glsl  Anime4K_Upscale_DoG_x2.glsl  Anime4K_Upscale_Original_x2.glsl
anime4k-glsl/Upscale+Denoise/: Anime4K_Upscale_Denoise_CNN_x2_L.glsl  Anime4K_Upscale_Denoise_CNN_x2_M.glsl  Anime4K_Upscale_Denoise_CNN_x2_S.glsl  Anime4K_Upscale_Denoise_CNN_x2_UL.glsl  Anime4K_Upscale_Denoise_CNN_x2_VL.glsl
crates/anime4k-wgpu/: Cargo.toml  build.rs
crates/anime4k-wgpu/examples/cli/: main.rs
crates/anime4k-wgpu/examples/player/: app.rs  decoder.rs  main.rs  player.rs  srgb_to_screen.wgsl  yuv_to_srgb.wgsl
crates/anime4k-wgpu/src/: executable_pipeline.rs  lib.rs  pipeline_executor.rs  pipelines.rs  presets.rs
crates/demo-web/: Cargo.toml  README.md  build.rs  index.html  test.html
crates/demo-web/src/: lib.rs  player.rs  utils.rs
crates/demo-web/src/shaders/: display.wgsl
crates/verification/: Cargo.toml  build.rs
crates/verification/src/: compare.rs  glsl_reference_engine.rs  lib.rs  wgpu_helpers.rs  wgsl_reference_engine.rs
public/: CNAME
web-demo-src/: README.md  global.css
web-demo-src/anime4k/: color_correction.wgsl  executor.ts  player.ts  presets.ts  render.wgsl
web-demo-src/components/: Toast.tsx  VideoControls.tsx  VideoPlayer.tsx  VideoPlayerPage.tsx  constants.ts  useDrag.ts  useIsFullscreen.ts  useToast.ts  videoMediaTypes.macro.ts  videoMediaTypes.ts
web-demo-src/layouts/: Layout.astro
web-demo-src/pages/: index.astro
wgsl/: CLAUDE.md
wgsl/auxiliary/: clamp_highlights_manifest.yaml  clamp_highlights_pass1_compute_stats_x.wgsl  clamp_highlights_pass2_compute_stats_y.wgsl  clamp_highlights_pass3_clamp.wgsl  deblur_dog_manifest.yaml  deblur_dog_pass2_kernel_x.wgsl  deblur_dog_pass3_kernel_y.wgsl  deblur_dog_pass4_apply.wgsl  deblur_original_manifest.yaml  deblur_original_pass1_luma.wgsl  deblur_original_pass2_kernel_x.wgsl  deblur_original_pass3_kernel_y.wgsl  deblur_original_pass4_kernel_x2.wgsl  deblur_original_pass5_kernel_y2.wgsl  deblur_original_pass6_apply.wgsl  deblur_original_pass7_resample.wgsl  denoise_bilateral_mean_manifest.yaml  denoise_bilateral_mean_pass1_filter.wgsl  denoise_bilateral_median_manifest.yaml  denoise_bilateral_median_pass2_apply.wgsl  denoise_bilateral_mode_manifest.yaml  denoise_bilateral_mode_pass2_apply.wgsl  effects_darken_manifest_fast.yaml  effects_darken_manifest_hq.yaml  effects_darken_manifest_veryfast.yaml  effects_darken_pass1_luma_noscaling.wgsl  effects_darken_pass2_gaussian_x_noscaling.wgsl  effects_darken_pass2_gaussian_x_scaling.wgsl  effects_darken_pass3_gaussian_y_noscaling.wgsl  effects_darken_pass3_gaussian_y_scaling.wgsl  effects_darken_pass4_gaussian_x2.wgsl  effects_darken_pass5_gaussian_y2.wgsl  effects_darken_pass5_gaussian_y2_apply.wgsl  effects_darken_pass6_apply_upsample.wgsl  effects_thin_manifest_fast.yaml  effects_thin_manifest_hq.yaml  effects_thin_manifest_veryfast.yaml  effects_thin_pass1_luma_scaling.wgsl  effects_thin_pass2_sobel_x_noscaling.wgsl  effects_thin_pass2_sobel_x_scaling.wgsl  (+17 more)
wgsl/helpers/: depth_to_space_in1x2.wgsl  depth_to_space_in3x2.wgsl
wgsl/wip/: upscale_dtd_x2_manifest.yaml  upscale_dtd_x2_pass10_gradient_gaussian_x.wgsl  upscale_dtd_x2_pass11_gradient_gaussian_y.wgsl  upscale_dtd_x2_pass12_gradient_2_x.wgsl  upscale_dtd_x2_pass13_gradient_2_y.wgsl  upscale_dtd_x2_pass14_upscale_warp.wgsl  upscale_dtd_x2_pass15_upscaled_luma.wgsl  upscale_dtd_x2_pass16_minmax_kernel_x.wgsl  upscale_dtd_x2_pass17_minmax_kernel_y.wgsl  (+10 more)
