[package]
name = "anime4k-wgpu"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
wgpu = "25"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
wgpu = { version = "25", features = ["glsl"] }
vk-video = { git = "https://github.com/software-mansion/smelter" } # To use wgpu 25
bytemuck = { version = "1", features = ["derive"] }
bytes = "1"
winit = "0.30"
image = "0.25"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-intrusive = "0.5"
pollster = "0.4"
regex = "1"

[build-dependencies]
anime4k-wgpu-build = { path = "../build" }
cfg_aliases = "0.2"
naga = { version = "24", features = ["wgsl-in", "wgsl-out"] }
wgsl-minifier = "0.7"
