[package]
name = "demo-web"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anime4k-wgpu = { path = "../anime4k-wgpu" }
wgpu = { version = "25", features = ["webgl", "webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "HtmlVideoElement",
  "HtmlElement",
  "Window",
  "FileReader",
  "File",
  "Blob",
  "FileList",
  "Event",
  "Url",
  "MediaError",
  "CssStyleDeclaration",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlLabelElement",
  "HtmlBrElement",
  "CanvasRenderingContext2d",
  "ImageData",
] }
js-sys = "0.3"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }
bytemuck = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-wasm = "0.2"
futures-intrusive = "0.5"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
